gcc/testsuite/rust/rustc/ui/unresolved/unresolved-asterisk-imports.rs
use not_existing_crate::*; // { dg-error ".E0432." "" { target *-*-* } }
use std as foo;

fn main() {}

